--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 python-dotenv==0.10.1
 pytz==2019.2
+redis==3.3.8
 six==1.12.0
 vine==1.3.0
 webassets==0.12.1
