--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Assets==0.12
 Flask-Cors==3.0.7
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -23,7 +24,7 @@ kombu==4.6.4
 MarkupSafe==1.1.0
 more-itertools==7.2.0
 peewee==3.8.2
-
+peewee-db-evolve==3.7.0
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 python-dateutil==2.8.0
